[project]
name = "bbcode"
dynamic = ["version"]
description = "A pure python bbcode parser and formatter."
authors = [
    { name = "Dan Watson", email = "dcwatson@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { text = "BSD" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Homepage = "https://github.com/dcwatson/bbcode"
Documentation = "https://dcwatson.github.io/bbcode/"

[project.scripts]
bbcode = "bbcode:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "bbcode.py"

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.5.42",
    "mkdocs>=1.6.1",
]
